Update ScalaInstall.md